[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "rozn"
version = "0.1.0"
description = "rozn — a local offline coding assistant. روزن"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "rich",
]

[project.scripts]
rozn = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]